test/langtools/tools/javac/IllegalAnnotation.out
IllegalAnnotation.java:11:10: compiler.err.annotation.decl.not.allowed.here
1 error
